---------------------------------------------------------------------------------------------------
Version: 3.0.4
Date: ??????
  Features:
    - Added Naked Rails. (assimilated Naked Rails mod)
    - Added Add empty blueprint to book hotkey. (linked to terrain size increase) will add and select an empty bp to the current book.
    - Added Remove empty blueprints from book. (linked to terrain size decrease) will remove all empty blueprints from the current book.
    - Added blueprint edge snapping (From Blueprint Extensions by Dewin).
    - Added blueprint updater (From Blueprint Extensions by Dewin).
    - Added picker cheat recipes
    - Filter Fill now works on the player inventory.
    - Train Goto next station hotkey added.
    - Player inventory can be manually sorted.
    - Honking can attract enemies (defaults to off).
    - Train horns are configurable.
  Enhancements:
    - Beltbrushs can be created from pipette blueprints of belts.
    - Pipette and Beltbrush blueprints are always cleaned from inventory.
    - Zapper always deletes blueprints you place in trash slots (add bps to autotrash to always trash em).
    - Selection tools, Blueprints, Blueprint Books, and Deconstruction items are hidden by default.
    - Changed the way notes are saved. Existing notes will get destroyed or lost.
    - Sort Inventory now uses sort_and_merge inventory method.
  Bugfixes:
    - Fix missing locale for equipment hotkeys.
    - Fix small logic bug in lib.
    - Allow specifying train horn.
    - Include changelog in release. #68
    - Reverse rotating saved dollies is now possible. Factorio Bug.
    - Fix belt reverser cloning wrong lines. #77
    - Fix miners getting incorrectly marked as finished. #76
    - Fix hand crafter crafting when holding items. #75
    - Fix mirror blueprint not mirroing splitters. #74
    - Fix map ping item description.
    - Fix filter fill nil error if mods change to custom gui. #72
    - Fix zapper being all undecidy in god mode. #70