@@ -1,0 +1,5 @@
+[mod-setting-name]
+picker-transfer-settings-death=Transfer Character Modifiers on Death
+
+[mod-setting-description]
+picker-transfer-settings-death=Tranfer Character Modifiers/Bonuses on Death
