@@ -2,7 +2,8 @@
 Version: 3.0.4
 Date: ??????
   Features:
-    - Added Naked Rails. (assimilated Naked Rails mod)
+    - Character Modifiers are restored when respawning.
+    - Added Naked Rails. (assimilated Naked Rails mod).
     - Added Add empty blueprint to book hotkey. (linked to terrain size increase) will add and select an empty bp to the current book.
     - Added Remove empty blueprints from book. (linked to terrain size decrease) will remove all empty blueprints from the current book.
     - Added blueprint edge snapping (From Blueprint Extensions by Dewin).
